# PersistentPropertyCheck

./: CMakeLists.txt
include/: PluginProcessor.h
source/: PluginProcessor.cpp
